# minimal_python_package

./: README.md  main.py  pyproject.toml
.github/workflows/: build_docs.yml  lint.yml
docs/source/: conf.py
minimal_python_package/: __init__.py  mathops.py
